# simu_tp1

./: .gitignore  README.md  automata.py  automata_celular.ipynb  requirements.txt  setup.cfg  view.py
src/: automata.py  view.py
src/simu_tp1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_automata.py
