[metadata]
name = simu_tp1
version = 0.0.1
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/flopezd/simu_tp1

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    matplotlib
    ipywidgets
    black[jupyter]
    isort
    pytest

[options.packages.find]
where = src